manifests/app-manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: app
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: worker
      containers:
        - name: backend
          image: ghcr.io/sadokkhessairi/test-app/backend:v0.2.3
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: sqlite-data
              mountPath: /data
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: sqlite-data
          persistentVolumeClaim:
            claimName: backend-sqlite-pvc
      imagePullSecrets:
        - name: ghcr-creds
